--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html dir='ltr' lang='en' xmlns:fb='http://www.facebook.com/2008/fbml'>
-<script async='async' nonce='I2YLlWR-W_Sv7mZu3qWPIA' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'>
-</script>
-<script nonce='I2YLlWR-W_Sv7mZu3qWPIA'>
-    (function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();
-</script>
-<script async='async' nonce='d8pAqct-dNuDhxBnLYBAlQ' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'></script>
-<script nonce='d8pAqct-dNuDhxBnLYBAlQ'>
-    (function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();
 </script>
 
 
@@ -15,11 +7,105 @@
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport' />
     <link href='https://web.cricfoot.net/favico.png' rel='icon' type='image/x-icon' />
     <link href='https://web.cricfoot.net/player.css' rel='stylesheet' />
-    <meta content='IE=edge' http-equiv='X-UA-Compatible' />
-    <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
-
-
-    <style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" id="meta-description" content="Watch live sports matches and highlights on YoSinTV.">
+  <meta name="keywords" id="meta-keywords" content="YoSinTV, live stream, football, cricket, sports highlights">
+  <meta property="og:title" id="og-title" content="YoSinTV - Live Sports Streaming">
+  <meta property="og:description" id="og-description" content="Watch live sports matches and highlights on YoSinTV.">
+  <meta property="og:url" id="og-url" content="">
+  <meta name="twitter:title" id="twitter-title" content="YoSinTV - Live Sports Streaming">
+  <meta name="twitter:description" id="twitter-description" content="Watch live sports matches and highlights on YoSinTV.">
+  <link rel="canonical" id="canonical-url" href="">
+ <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    main:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 6px 24px rgba(0, 0, 0, 0.15);
+    }
+    #match-info {
+      text-align: left;
+    }
+    #match-info p {
+      font-size: 1.1rem;
+      color: var(--text-secondary);
+      margin-bottom: 1.5rem;
+    }
+    #match-info p span {
+      background: #e5e7eb;
+      padding: 0.25rem 0.5rem;
+      font-family: 'Courier New', monospace;
+    }
+    .match-card {
+      background: var(--card-bg);
+      border: 1px solid var(--border);
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      transition: var(--transition);
+    }
+    .match-card h3 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      color: var(--text-primary);
+    }
+    .match-card p {
+      font-size: 1rem;
+      color: var(--text-secondary);
+      margin-bottom: 0.5rem;
+    }
+    .faq {
+      margin-top: 2rem;
+    }
+    .faq-item {
+      background: #f9fafb;
+      border-radius: 0.75rem;
+      margin-bottom: 0.5rem;
+      padding: 0.5rem;
+    }
+    .faq-question {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: var(--text-primary);
+      margin-bottom: 0.5rem;
+    }
+    .faq-answer {
+      font-size: 1rem;
+      color: var(--text-secondary);
+    }
+    .faq-answer a {
+      color: var(--primary);
+      text-decoration: underline;
+    }
+    .faq-answer a:hover {
+      color: var(--secondary);
+    }
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      main {
+        padding: 1.5rem;
+      }
+      .match-card h3 {
+        font-size: 1.5rem;
+      }
+      .faq-question {
+        font-size: 1rem;
+      }
+    }
+    @media (max-width: 480px) {
+      .match-card {
+        padding: 1rem;
+      }
+    }
+  </style>
+  
+  <style>
         /*Font Library https://fonts.google.com/ */
            @font-face{font-family:'Neo Sans Arabic';font-style:normal;font-weight:normal;font-display:swap;src:local('Neo Sans Arabic'),url('https://fonts.gstatic.com/s/opensans/v36/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4taVIUwaEQbjB_mQ.woff2') format('woff')}
         
@@ -222,33 +308,170 @@
                 <div class='container'>
                     <div class='tabsbox'>
 
-                        <div class='box-title'>
-                            <h3><strong>YoSinTV - DMCA</strong></h3>
-                        </div>
-                        <div class='wdthbox'>
-
-                            <p>YoSinTV Doesn't host any media content on it own Site. Our site visitors might use external or third parties services to show content, (Example: Embedding media from sites like Bet365, Dailymotion , Streamable etc ..) We Notify
-                                all copyright owners, to discover that the links and media shared by visitors and contained within this site are hosted somewhere else on the web or embedded from other various sites like above. </p>
-
-
-                            <h3> What is YoSinTV ?</h3>
-                            <p>YoSinTV is sports website that covers all the Cricket Matches, World Cup, International/Domestic Matches, Football Matches, etc.</p>
-
-                            <h3>How Does YoSinTV Work??</h3>
-                            <p>YoSinTV Work gives you full access, where you will find a comprehensive Dashboard showing ongoing tournaments and matches for all teams. For example, if there’s a match between two teams, you’ll see a ‘Live Now’ button next
-                                to the match details. Clicking on it will take you to a live stream of the match. The schedule for upcoming matches, whether today or tomorrow, is conveniently provided. Yosin TV’s platform is user-friendly, simple, and
-                                clean, making navigation easy. Enjoy a variety of live streams in cricket, football, soccer, and other sections.</p>
-
-
-                            <h3>How to watch live-streaming matches on YoSinTV??</h3>
-                            <p>To watch live matches on YoSinTV, find the sport and match you want and click the link to access the live stream.</p>
-
-                            <h3>Is YoSinTV Free?</h3>
-                            <p>YoSinTV itself is free to access, but some live streams may only be available on paid tiers or subscriptions, YoSinTV’s platform is user-friendly, simple, and clean, making navigation easy. Enjoy a variety of live streams in
-                                cricket, football, soccer, and other sections.
-
-                            </p>
-                        </div>
+  <main class="max-w-4xl mx-auto bg-white shadow-xl rounded-2xl p-6 md:p-8 lg:p-10 border border-gray-200">
+    <div id="match-info" class="text-center">
+    </div>
+  </main>
+  <script>
+    document.addEventListener('DOMContentLoaded', async () => {
+      // --- Utilities ---
+      const normalize = (s='') =>
+        s.toString()
+         .toLowerCase()
+         .normalize('NFKD')
+         .replace(/[\u0300-\u036f]/g,'') // diacritics
+         .replace(/&/g,'and')
+         .replace(/[^a-z0-9]/g,''); // strip spaces/punct
+      const splitTeams = (name='') => name.split(/\s+(?:vs?|—|-)\s+/i).map(t => t.trim());
+      const extractTeamFromLink = (link='') => {
+        const match = link.match(/yosintv=([^&]+)/i);
+        return match ? normalize(match[1]) : '';
+      };
+      const optionsTime = {
+        weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
+        hour: '2-digit', minute: '2-digit', second: '2-digit',
+        hour12: false, timeZoneName: 'short'
+      };
+      const formatTime = (isoString) => {
+        const date = new Date(isoString);
+        return date.toLocaleString(undefined, optionsTime) + ' (Your Local Time)';
+      };
+      const updateCountdown = (startTime, el) => {
+        const now = new Date();
+        const start = new Date(startTime);
+        const diff = start.getTime() - now.getTime();
+        if (diff <= 0) { el.textContent = ''; return; } // Removed "Match has started!"
+        const days = Math.floor(diff / 86400000);
+        const hours = Math.floor((diff % 86400000) / 3600000);
+        const minutes = Math.floor((diff % 3600000) / 60000);
+        const seconds = Math.floor((diff % 60000) / 1000);
+        el.textContent = `Countdown: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+      };
+      const jsonFiles = [
+        { id: 'yosintv-fight', file: 'https://yosintv11.pages.dev/fight.json', title: 'UFC/MMA/Boxing' },
+        { id: 'yosintv-cricket', file: 'https://yosintv11.pages.dev/cricket.json', title: 'Top Cricket' },
+        { id: 'yosintv-cleague', file: 'https://yosintv11.pages.dev/cleague.json', title: 'Cricket League' },
+        { id: 'yosintv-nepal', file: 'https://yosintv11.pages.dev/nepal.json', title: '4-Nations Women' },
+        { id: 'yosintv-npl', file: 'https://yosintv11.pages.dev/npl.json', title: 'NPL T20' },
+        { id: 'yosintv-ucl', file: 'https://yosintv11.pages.dev/ucl.json', title: 'Champions League' },
+        { id: 'yosintv-football', file: 'https://yosintv11.pages.dev/football.json', title: 'Top Football' },
+        { id: 'yosintv-laliga', file: 'https://yosintv11.pages.dev/more.json', title: 'More Football' },
+        { id: 'yosintv-epl', file: 'https://yosintv11.pages.dev/epl.json', title: 'EPL' },
+        { id: 'yosintv-seriea', file: 'https://yosintv11.pages.dev/seriea.json', title: 'Serie A' },
+        { id: 'yosintv-ligue1', file: 'https://yosintv11.pages.dev/ligue1.json', title: 'Ligue 1' },
+        { id: 'yosintv-bundesliga', file: 'https://yosintv11.pages.dev/bundesliga.json', title: 'Bundesliga' }
+      ];
+      const matchInfoContainer = document.getElementById('match-info');
+      const renderMatchCard = (matchData, leagueTitle) => {
+        const { name, start, duration, link } = matchData;
+        const [team1='', team2=''] = splitTeams(name);
+        const startTime = formatTime(start);
+        // Update dynamic title
+        document.title = `YoSinTV - ${name} Live Stream`;
+        // Update meta tags
+        document.getElementById('meta-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
+        document.getElementById('meta-keywords').content = `${team1} vs ${team2} live stream, ${leagueTitle} live, ${team1} highlights, ${team2} highlights, YoSinTV`;
+        document.getElementById('og-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
+        document.getElementById('og-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
+        document.getElementById('og-url').content = window.location.href;
+        document.getElementById('twitter-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
+        document.getElementById('twitter-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
+        document.getElementById('canonical-url').href = window.location.href;
+        const progressContainer = document.createElement('div');
+        progressContainer.className = 'progress-container';
+        const progressBar = document.createElement('div');
+        progressBar.className = 'progress-bar';
+        const progressText = document.createElement('p');
+        progressText.className = 'progress-text';
+        progressContainer.appendChild(progressBar);
+        const content = document.createElement('div');
+        content.className = 'match-card';
+        content.innerHTML = `
+          <h3 class="text-3xl font-bold mb-4">${name}</h3>
+          <p class="text-sm text-gray-600 mb-1">League: ${leagueTitle}</p>
+          <p class="text-sm text-gray-600 mb-1">Start: ${startTime}</p>
+          <div class="flex justify-center my-4">
+            <a href="${link}" target="_blank" class="watch-btn">Watch Live Stream</a>
+          </div>
+          <h3 class="text-2xl font-bold mt-8 mb-4 border-b-2 pb-2 border-gray-200">Frequently Asked Questions</h3>
+          <div class="faq space-y-4">
+            <div class="faq-item">
+              <div class="faq-question">Which teams are playing in the ${name} match in ${leagueTitle}?</div>
+              <div class="faq-answer">${team1} will face off against ${team2} in this exciting ${leagueTitle} match.</div>
+            </div>
+            <div class="faq-item">
+              <div class="faq-question">When does the ${name} match start and where is it held?</div>
+              <div class="faq-answer">The match starts at ${startTime}. Visit the official ${leagueTitle} website for venue details.</div>
+            </div>
+            <div class="faq-item">
+              <div class="faq-question">How long is the ${name} match in ${leagueTitle}?</div>
+              <div class="faq-answer">The match is expected to last approximately ${duration} hours, including stoppage time.</div>
+            </div>
+            <div class="faq-item">
+              <div class="faq-question">Where can I watch the ${name} match live stream online?</div>
+              <div class="faq-answer">Stream the match live via the <a href="${link}" target="_blank" class="text-blue-600 hover:text-blue-800 underline">official live stream</a>.</div>
+            </div>
+            <div class="faq-item">
+              <div class="faq-question">Who are the key players in the ${name} match?</div>
+              <div class="faq-answer">Look out for star players from ${team1} and ${team2}. Check the ${leagueTitle} site for confirmed lineups.</div>
+            </div>
+            <div class="faq-item">
+              <div class="faq-question">What is the recent performance of ${team1} and ${team2} in ${leagueTitle}?</div>
+              <div class="faq-answer">Check the latest form guides and stats for ${team1} and ${team2} on the official ${leagueTitle} website.</div>
+            </div>
+          </div>
+        `;
+        content.prepend(progressText);
+        content.prepend(progressContainer);
+        matchInfoContainer.appendChild(content);
+        setInterval(() => updateProgressBar(start, duration, progressContainer, progressBar, progressText), 1000);
+      };
+      const urlParams = new URLSearchParams(window.location.search);
+      const teamParamRaw = urlParams.get('yosintv');
+      if (teamParamRaw) {
+        matchInfoContainer.innerHTML = '<p class="text-gray-500 text-xl font-medium animate-pulse">Searching for match data...</p>';
+        const qNorm = normalize(teamParamRaw);
+        const found = [];
+        const seen = new Set(); // dedupe by id or name+start+league
+        // Fetch all in parallel
+        const results = await Promise.allSettled(
+          jsonFiles.map(l =>
+            fetch(l.file).then(r => {
+              if (!r.ok) throw new Error(`${r.status}`);
+              return r.json().then(data => ({ league: l.title, data }));
+            })
+          )
+        );
+        for (const r of results) {
+          if (r.status !== 'fulfilled') continue;
+          const { league, data } = r.value;
+          const list = Array.isArray(data) ? data
+                    : Array.isArray(data.matches) ? data.matches
+                    : Array.isArray(data.events) ? data.events
+                    : Array.isArray(data.data) ? data.data
+                    : [];
+          for (const m of list) {
+            if (!m?.name || !m?.link) continue;
+            const linkTeam = extractTeamFromLink(m.link);
+            if (linkTeam === qNorm) {
+              const key = m.id ? `id:${m.id}` : `ns:${normalize(m.name)}|${m.start||''}|${league}`;
+              if (seen.has(key) || found.length >= 1) continue;
+              seen.add(key);
+              found.push({ match: m, league });
+            }
+          }
+        }
+        if (found.length) {
+          matchInfoContainer.innerHTML = '';
+          found.sort((a, b) => new Date(a.match.start || 0) - new Date(b.match.start || 0));
+          found.forEach(item => renderMatchCard(item.match, item.league));
+        } else {
+          matchInfoContainer.innerHTML = '<p class="text-red-500">Match does not exist right now.</p>';
+        }
+      }
+    });
+  </script>
+                      
 
                     </div>
                 </div>
