--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="canonical" id="canonical-url" href="" />
   <link href="https://web.cricfoot.net/favico.png" rel="icon" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+
   <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
 </head>
 <body class="bg-gray-100 font-sans text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
@@ -249,15 +251,11 @@
   </footer>
 
 
-<script type='text/javascript'>
-    $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').hide(90);});});
-</script>
-<div id='fixedban' class='w-full mx-auto text-center overflow-hidden fixed bottom-0 z-[999]'>
-    <div class='relative max-w-[300px] h-[250px] mx-auto'>
-        <a id='close-fixedban' onclick='document.getElementById("fixedban").style.display = "none";' class='cursor-pointer absolute top-2 right-2 z-[1000]'>
-            <img alt='close' src='https://yosintv2.github.io/bkp/close.gif' class='align-middle' title='close button' />
-        </a>
-        <div class='text-center block max-w-[300px] h-[250px] overflow-hidden mx-auto'>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<div id='fixedban' class='fixed bottom-0 left-1/2 -translate-x-1/2 z-[999]'>
+    <div class='relative w-[300px] h-[250px] bg-white rounded-lg shadow-xl border border-gray-200'>
+        <button id='close-fixedban' class='absolute left-1/2 -translate-x-1/2 top-3 text-sm font-medium text-blue-600 hover:text-blue-800 transition-colors duration-200 cursor-pointer z-[1000]'>Close</button>
+        <div class='w-[300px] h-[250px] overflow-hidden pt-8'>
             <ins class='adsbygoogle inline-block w-[300px] h-[250px]' data-ad-client='ca-pub-5525538810839147' data-ad-slot='5912194004'></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
@@ -265,7 +263,13 @@
         </div>
     </div>
 </div>
-
+<script type='text/javascript'>
+    $(document).ready(function() {
+        $('#close-fixedban').click(function() {
+            $('#fixedban').hide(90);
+        });
+    });
+</script>
   
   
   <script>
