--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta namepieza name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" id="meta-description" content="Watch live sports matches and highlights on YoSinTV." />
   <meta name="keywords" id="meta-keywords" content="YoSinTV, live stream, football, cricket, sports highlights" />
   <meta property="og:title" id="og-title" content="YoSinTV - Live Sports Streaming" />
@@ -44,7 +44,8 @@
   <!-- Main Content -->
   <main class="container mx-auto max-w-4xl px-4 py-8">
     <section class="bg-white rounded-lg shadow-md p-6 mb-6">
-      <div class="space-y-4">
+      <div class="space-y-4" id="cricket-matches">
+        <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900" id="match-name"></h3>
         <p>● Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
         <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
         <div class="adspos">
@@ -132,6 +133,7 @@
         { id: 'yosintv-bundesliga', file: 'https://yosintv11.pages.dev/bundesliga.json', title: 'Bundesliga' }
       ];
       const matchInfoContainer = document.getElementById('match-info');
+      const matchNameElement = document.getElementById('match-name');
       const renderMatchCard = (matchData, leagueTitle) => {
         const { name, start, duration, link } = matchData;
         const [team1='', team2=''] = splitTeams(name);
@@ -145,6 +147,7 @@
         document.getElementById('twitter-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
         document.getElementById('twitter-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
         document.getElementById('canonical-url').href = window.location.href;
+        matchNameElement.textContent = `${name} Live Details`;
         const progressContainer = document.createElement('div');
         progressContainer.className = 'w-full bg-gray-200 rounded-full h-4 mb-4';
         const progressBar = document.createElement('div');
@@ -155,7 +158,7 @@
         const content = document.createElement('div');
         content.className = 'space-y-4 text-left';
         content.innerHTML = `
-          <h3 class="text-3xl font-bold text-gray-900">${name} - Match Details</h3>
+          <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900">${name} - Match Details</h3>
           <p class="text-sm text-gray-600">Start: ${startTime}</p>
           <div class="flex justify-center my-4"></div>
           <h3 class="text-2xl font-bold border-b-2 border-gray-200 pb-2 text-gray-900">Frequently Asked Questions</h3>
@@ -225,7 +228,10 @@
           found.forEach(item => renderMatchCard(item.match, item.league));
         } else {
           matchInfoContainer.innerHTML = '<p class="text-red-500">This Match is Not Live Right Now</p>';
+          matchNameElement.textContent = 'No Match Available';
         }
+      } else {
+        matchNameElement.textContent = 'No Match Selected';
       }
     });
   </script>
