--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta namepieza name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index" />
   <meta name="description" id="meta-description" content="Watch live sports matches and highlights on YoSinTV." />
   <meta name="keywords" id="meta-keywords" content="YoSinTV, live stream, football, cricket, sports highlights" />
   <meta property="og:title" id="og-title" content="YoSinTV - Live Sports Streaming" />
@@ -57,13 +58,18 @@
         <div id="live-tracker"></div>
         <p>● The links to watch the match turn on 15 minutes before the game starts.</p>
         <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
-        <p>● 📲💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
+        <p>● 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
         <div id="live-container"></div>
       </div>
     </section>
 
-    <section class="bg-white rounded-lg shadow-md p-6">
+    <section class="bg-white rounded-lg shadow-md p-6 mb-6">
       <div id="match-info"></div>
+    </section>
+
+    <section class="bg-white rounded-lg shadow-md p-6">
+      <h3 class="text-2xl font-bold text-gray-900 mb-4">More Matches</h3>
+      <div id="more-matches" class="space-y-2"></div>
     </section>
   </main>
 
@@ -89,12 +95,27 @@
         hour: '2-digit',
         minute: '2-digit',
         second: '2-digit',
-        hour12: false,
-        timeZoneName: 'short'
+        hour12: false
       };
       const formatTime = (isoString) => {
         const date = new Date(isoString);
-        return date.toLocaleString(undefined, optionsTime) + ' (Your Local Time)';
+        return date.toLocaleString(undefined, optionsTime);
+      };
+      const formatProgressTime = (diff, total, duration) => {
+        const elapsedHours = Math.floor(diff / 3600000);
+        const elapsedMinutes = Math.floor((diff % 3600000) / 60000);
+        const elapsedSeconds = Math.floor((diff % 60000) / 1000);
+        const totalHours = Math.floor(duration);
+        const totalMinutes = Math.round((duration % 1) * 60);
+        const totalSeconds = 0;
+        return `Time: ${elapsedHours}:${elapsedMinutes.toString().padStart(2, '0')}:${elapsedSeconds.toString().padStart(2, '0')} / ${totalHours}:${totalMinutes.toString().padStart(2, '0')}:${totalSeconds.toString().padStart(2, '0')}`;
+      };
+      const formatCountdown = (diff) => {
+        if (diff < 0) return '<span class="text-red-600 font-bold">Watch Now</span>';
+        const hours = Math.floor(diff / 3600000);
+        const minutes = Math.floor((diff % 3600000) / 60000);
+        const seconds = Math.floor((diff % 60000) / 1000);
+        return `Starts: ${hours}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
       };
       const updateProgressBar = (start, duration, container, bar, text) => {
         const now = new Date();
@@ -111,11 +132,7 @@
           text.textContent = 'Match Ended';
           return;
         }
-        const elapsedHours = Math.floor(diff / 3600000);
-        const elapsedMinutes = Math.floor((diff % 3600000) / 60000);
-        const totalHours = Math.floor(duration);
-        const totalMinutes = Math.round((duration % 1) * 60);
-        text.textContent = `Time: ${elapsedHours}h ${elapsedMinutes}m / ${totalHours}h ${totalMinutes}m`;
+        text.textContent = formatProgressTime(diff, total, duration);
         bar.style.width = `${(diff / total) * 100}%`;
       };
       const jsonFiles = [
@@ -134,65 +151,85 @@
       ];
       const matchInfoContainer = document.getElementById('match-info');
       const matchNameElement = document.getElementById('match-name');
-      const renderMatchCard = (matchData, leagueTitle) => {
+      const moreMatchesContainer = document.getElementById('more-matches');
+      const renderMatchCard = (matchData, leagueTitle, isMainMatch = true) => {
         const { name, start, duration, link } = matchData;
         const [team1='', team2=''] = splitTeams(name);
         const startTime = formatTime(start);
-        document.title = `YoSinTV - ${name} Live Stream`;
-        document.getElementById('meta-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
-        document.getElementById('meta-keywords').content = `${team1} vs ${team2} live stream, ${leagueTitle} live, ${team1} highlights, ${team2} highlights, YoSinTV`;
-        document.getElementById('og-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
-        document.getElementById('og-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
-        document.getElementById('og-url').content = window.location.href;
-        document.getElementById('twitter-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
-        document.getElementById('twitter-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for ${leagueTitle} matches.`;
-        document.getElementById('canonical-url').href = window.location.href;
-        matchNameElement.textContent = `${name} Live Details`;
-        const progressContainer = document.createElement('div');
-        progressContainer.className = 'w-full bg-gray-200 rounded-full h-4 mb-4';
-        const progressBar = document.createElement('div');
-        progressBar.className = 'bg-blue-600 h-4 rounded-full';
-        const progressText = document.createElement('div');
-        progressText.className = 'text-sm text-gray-600 mb-2';
-        progressContainer.appendChild(progressBar);
-        const content = document.createElement('div');
-        content.className = 'space-y-4 text-left';
-        content.innerHTML = `
-          <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900">${name} - Match Details</h3>
-          <p class="text-sm text-gray-600">Start: ${startTime}</p>
-          <div class="flex justify-center my-4"></div>
-          <h3 class="text-2xl font-bold border-b-2 border-gray-200 pb-2 text-gray-900">Frequently Asked Questions</h3>
-          <div class="space-y-4">
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">Which teams are playing in the ${name} match in ${leagueTitle}?</h4>
-              <p class="text-gray-600">${team1} will face off against ${team2} in this exciting ${leagueTitle} match.</p>
+        if (isMainMatch) {
+          document.title = `YoSinTV - ${name} Live Stream`;
+          document.getElementById('meta-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for sports matches.`;
+          document.getElementById('meta-keywords').content = `${team1} vs ${team2} live stream, sports live, ${team1} highlights, ${team2} highlights, YoSinTV`;
+          document.getElementById('og-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
+          document.getElementById('og-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for sports matches.`;
+          document.getElementById('og-url').content = window.location.href;
+          document.getElementById('twitter-title').content = `YoSinTV - ${team1} vs ${team2} Live Stream`;
+          document.getElementById('twitter-description').content = `Watch ${team1} vs ${team2} live stream on YoSinTV, your source for sports matches.`;
+          document.getElementById('canonical-url').href = window.location.href;
+          matchNameElement.textContent = `${name} Live Details`;
+          const progressContainer = document.createElement('div');
+          progressContainer.className = 'w-full bg-gray-200 rounded-full h-6 mb-4';
+          const progressBar = document.createElement('div');
+          progressBar.className = 'bg-red-600 h-6 rounded-full';
+          const progressText = document.createElement('div');
+          progressText.className = 'text-sm text-gray-600 mb-2 font-bold';
+          progressContainer.appendChild(progressBar);
+          const content = document.createElement('div');
+          content.className = 'space-y-4 text-left';
+          content.innerHTML = `
+            <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900">${name} - Match Details</h3>
+            <p class="text-sm text-gray-600">Start: ${startTime}</p>
+            <div class="flex justify-center my-4"></div>
+            <h3 class="text-2xl font-bold border-b-2 border-gray-200 pb-2 text-gray-900">Frequently Asked Questions</h3>
+            <div class="space-y-4">
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">Which teams are playing in the ${name} match?</h4>
+                <p class="text-gray-600">${team1} will face off against ${team2} in this exciting match.</p>
+              </div>
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">When and where is the ${name} match happening?</h4>
+                <p class="text-gray-600">The match starts at ${startTime}. Check official sources for venue details.</p>
+              </div>
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">How long will the ${name} match last?</h4>
+                <p class="text-gray-600">The match is expected to last about ${duration} hours, including stoppage time.</p>
+              </div>
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">Where can I watch the ${name} match live online?</h4>
+                <p class="text-gray-600">Stream the match live via the <a href="${link}" target="_blank" class="text-blue-600 hover:underline">official live stream</a>.</p>
+              </div>
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">Who are the key players to watch in the ${name} match?</h4>
+                <p class="text-gray-600">Look out for star players from ${team1} and ${team2}. Check official sources for confirmed lineups.</p>
+              </div>
+              <div class="bg-gray-50 p-4 rounded-lg">
+                <h4 class="text-lg font-semibold text-gray-900">What is the recent performance of ${team1} and ${team2}?</h4>
+                <p class="text-gray-600">Check the latest form guides and stats for ${team1} and ${team2} on official sports websites.</p>
+              </div>
             </div>
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">When does the ${name} match start and where is it held?</h4>
-              <p class="text-gray-600">The match starts at ${startTime}. Visit the official ${leagueTitle} website for venue details.</p>
-            </div>
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">How long is the ${name} match in ${leagueTitle}?</h4>
-              <p class="text-gray-600">The match is expected to last approximately ${duration} hours, including stoppage time.</p>
-            </div>
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">Where can I watch the ${name} match live stream online?</h4>
-              <p class="text-gray-600">Stream the match live via the <a href="${link}" target="_blank" class="text-blue-600 hover:underline">official live stream</a>.</p>
-            </div>
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">Who are the key players in the ${name} match?</h4>
-              <p class="text-gray-600">Look out for star players from ${team1} and ${team2}. Check the ${leagueTitle} site for confirmed lineups.</p>
-            </div>
-            <div class="bg-gray-50 p-4 rounded-lg">
-              <h4 class="text-lg font-semibold text-gray-900">What is the recent performance of ${team1} and ${team2} in ${leagueTitle}?</h4>
-              <p class="text-gray-600">Check the latest form guides and stats for ${team1} and ${team2} on the official ${leagueTitle} website.</p>
-            </div>
-          </div>
-        `;
-        content.prepend(progressText);
-        content.prepend(progressContainer);
-        matchInfoContainer.appendChild(content);
-        setInterval(() => updateProgressBar(start, duration, progressContainer, progressBar, progressText), 1000);
+          `;
+          content.prepend(progressText);
+          content.prepend(progressContainer);
+          matchInfoContainer.appendChild(content);
+          setInterval(() => updateProgressBar(start, duration, progressContainer, progressBar, progressText), 1000);
+        } else {
+          const now = new Date();
+          const startTime = new Date(start);
+          const diff = startTime.getTime() - now.getTime();
+          const matchCard = document.createElement('a');
+          matchCard.href = link;
+          matchCard.target = '_blank';
+          matchCard.className = 'bg-gray-50 p-4 rounded-lg flex justify-between items-center block hover:bg-gray-100';
+          matchCard.innerHTML = `
+            <h4 class="text-lg font-semibold text-gray-900 pr-4">${name}</h4>
+            <p class="text-sm text-gray-600 pl-4">${formatCountdown(diff)}</p>
+          `;
+          moreMatchesContainer.appendChild(matchCard);
+          setInterval(() => {
+            const updatedDiff = new Date(start).getTime() - new Date().getTime();
+            matchCard.querySelector('p').innerHTML = formatCountdown(updatedDiff);
+          }, 1000);
+        }
       };
       const urlParams = new URLSearchParams(window.location.search);
       const teamParamRaw = urlParams.get('yosintv');
@@ -201,15 +238,16 @@
         const qNorm = normalize(teamParamRaw);
         const found = [];
         const seen = new Set();
+        let mainMatchJsonFile = null;
         const results = await Promise.allSettled(
           jsonFiles.map(l => fetch(l.file).then(r => {
             if (!r.ok) throw new Error(`${r.status}`);
-            return r.json().then(data => ({ league: l.title, data }));
+            return r.json().then(data => ({ league: l.title, file: l.file, data }));
           }))
         );
         for (const r of results) {
           if (r.status !== 'fulfilled') continue;
-          const { league, data } = r.value;
+          const { league, file, data } = r.value;
           const list = Array.isArray(data) ? data : Array.isArray(data.matches) ? data.matches : Array.isArray(data.events) ? data.events : Array.isArray(data.data) ? data.data : [];
           for (const m of list) {
             if (!m?.name || !m?.link) continue;
@@ -219,6 +257,7 @@
               if (seen.has(key) || found.length >= 1) continue;
               seen.add(key);
               found.push({ match: m, league });
+              mainMatchJsonFile = file;
             }
           }
         }
@@ -226,6 +265,20 @@
           matchInfoContainer.innerHTML = '';
           found.sort((a, b) => new Date(a.match.start || 0) - new Date(b.match.start || 0));
           found.forEach(item => renderMatchCard(item.match, item.league));
+          if (mainMatchJsonFile) {
+            const response = await fetch(mainMatchJsonFile);
+            if (response.ok) {
+              const data = await response.json();
+              const list = Array.isArray(data) ? data : Array.isArray(data.matches) ? data.matches : Array.isArray(data.events) ? data.events : Array.isArray(data.data) ? data.data : [];
+              const otherMatches = list.filter(m => {
+                const linkTeam = extractTeamFromLink(m.link);
+                return linkTeam !== qNorm && m.name && m.link && m.start;
+              });
+              const shuffled = otherMatches.sort(() => 0.5 - Math.random());
+              const randomMatches = shuffled.slice(0, 3);
+              randomMatches.forEach(match => renderMatchCard(match, found[0].league, false));
+            }
+          }
         } else {
           matchInfoContainer.innerHTML = '<p class="text-red-500">This Match is Not Live Right Now</p>';
           matchNameElement.textContent = 'No Match Available';
